--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+fastapi = "^0.104.1"
+uvicorn = "^0.24.0.post1"
+openai = "^1.3.5"
+docker = "^6.1.3"
 
 
 [build-system]
