--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,20 @@
 [tool.poetry]
-name = "multi-agent-frontend-dev"
+name = "multi-agent-dev"
 version = "0.1.0"
 description = ""
-authors = ["Lasse, David, Benedikt, Eric"]
+authors = ["David, Lasse, Benedikt, Eric"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-fastapi = "^0.104.1"
-uvicorn = "^0.24.0.post1"
-openai = "^1.3.5"
-docker = "^6.1.3"
+python = "3.10.11"
+PySide6 = "^6.6.1"
+openai = "^1.7.0"
+langchain = "^0.1.0"
+docker = "^7.0.0"
 python-dotenv = "^1.0.0"
-langchain = "^0.0.345"
+fastapi = "^0.108.0"
+uvicorn = "^0.25.0"
 
-
-[tool.poetry.group.dev.dependencies]
-ipykernel = "^6.27.1"
 
 [build-system]
 requires = ["poetry-core"]
