--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ docker = "^7.0.0"
 python-dotenv = "^1.0.0"
 fastapi = "^0.108.0"
 uvicorn = "^0.25.0"
+asyncpg = "^0.24.0"
+pydantic = "^1.8.2"
+pandas = "^1.3.3"
+numpy = "^1.21.2"
 
 
 [build-system]
