--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ asyncpg = "^0.24.0"
 pydantic = "^1.8.2"
 pandas = "^1.3.3"
 numpy = "^1.21.2"
+ipykernel = "^6.29.0"
+matplotlib = "^3.8.2"
+seaborn = "^0.13.1"
 
 
 [build-system]
