--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ ipykernel = "^6.29.0"
 matplotlib = "^3.8.2"
 seaborn = "^0.13.1"
 langchain-openai = "^0.0.3"
+selenium = "^4.16.0"
+webdriver-manager = "^4.0.1"
 
 
 [build-system]
