--- a/requirements.txt
+++ b/requirements.txt
@@ -1,90 +1,104 @@
-aiohttp==3.9.1
-aiosignal==1.3.1
-annotated-types==0.6.0
-anyio==3.7.1
-asttokens==2.4.1
-attrs==23.1.0
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comm==0.2.0
-dataclasses-json==0.6.0
-debugpy==1.7.0
-decorator==5.1.1
-distro==1.8.0
-docker==7.0.0
-executing==2.0.1
-fastapi==0.105.0
-frozenlist==1.4.1
-greenlet==3.0.2
-h11==0.14.0
-httpcore==1.0.2
-httpx==0.25.2
-idna==3.6
-ipykernel==6.27.1
-ipython==8.18.1
-jedi==0.19.1
-jsonpatch==1.33
-jsonpointer==2.4
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-langchain==0.0.350
-langchain-community==0.0.3
-langchain-core==0.1.14
-langchain-openai==0.0.3
-langsmith==0.0.83
-marshmallow==3.20.1
-matplotlib-inline==0.1.6
-multidict==6.0.4
-mypy-extensions==1.0.0
-nest-asyncio==1.5.8
-numpy==1.26.2
-openai==1.9.0
-outcome==1.3.0.post0
-packaging==23.2
-parso==0.8.3
-path==16.9.0
-platformdirs==4.1.0
-prompt-toolkit==3.0.43
-psutil==5.9.7
-pure-eval==0.2.2
-pycparser==2.21
-pydantic==2.5.2
-pydantic_core==2.14.5
-Pygments==2.17.2
-PySide6==6.6.1
-PySide6-Addons==6.6.1
-PySide6-Essentials==6.6.1
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-pywin32==306
-PyYAML==6.0.1
-pyzmq==25.1.2
-regex==2023.12.25
-requests==2.31.0
-selenium==4.16.0
-shiboken6==6.6.1
-six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-SQLAlchemy==2.0.23
-stack-data==0.6.3
-starlette==0.27.0
-tenacity==8.2.3
-tiktoken==0.5.2
-tornado==6.4
-tqdm==4.66.1
-traitlets==5.14.0
-trio==0.24.0
-trio-websocket==0.11.1
-typing-inspect==0.9.0
-typing_extensions==4.9.0
-urllib3==2.1.0
-uvicorn==0.24.0.post1
-wcwidth==0.2.12
-webdriver-manager==4.0.1
-wsproto==1.2.0
-yarl==1.9.4
+aiohttp==3.9.1 ; python_full_version == "3.10.11"
+aiosignal==1.3.1 ; python_full_version == "3.10.11"
+anyio==4.2.0 ; python_full_version == "3.10.11"
+appnope==0.1.3 ; platform_system == "Darwin" and python_full_version == "3.10.11"
+asttokens==2.4.1 ; python_full_version == "3.10.11"
+async-timeout==4.0.3 ; python_full_version == "3.10.11"
+asyncpg==0.24.0 ; python_full_version == "3.10.11"
+attrs==23.2.0 ; python_full_version == "3.10.11"
+certifi==2023.11.17 ; python_full_version == "3.10.11"
+cffi==1.16.0 ; (implementation_name == "pypy" or os_name == "nt") and python_full_version == "3.10.11"
+charset-normalizer==3.3.2 ; python_full_version == "3.10.11"
+click==8.1.7 ; python_full_version == "3.10.11"
+colorama==0.4.6 ; python_full_version == "3.10.11" and (platform_system == "Windows" or sys_platform == "win32")
+comm==0.2.1 ; python_full_version == "3.10.11"
+contourpy==1.2.0 ; python_full_version == "3.10.11"
+cycler==0.12.1 ; python_full_version == "3.10.11"
+dataclasses-json==0.6.3 ; python_full_version == "3.10.11"
+debugpy==1.8.0 ; python_full_version == "3.10.11"
+decorator==5.1.1 ; python_full_version == "3.10.11"
+distro==1.9.0 ; python_full_version == "3.10.11"
+docker==7.0.0 ; python_full_version == "3.10.11"
+exceptiongroup==1.2.0 ; python_full_version == "3.10.11"
+executing==2.0.1 ; python_full_version == "3.10.11"
+fastapi==0.108.0 ; python_full_version == "3.10.11"
+fonttools==4.47.2 ; python_full_version == "3.10.11"
+frozenlist==1.4.1 ; python_full_version == "3.10.11"
+greenlet==3.0.3 ; (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_full_version == "3.10.11"
+h11==0.14.0 ; python_full_version == "3.10.11"
+httpcore==1.0.2 ; python_full_version == "3.10.11"
+httpx==0.26.0 ; python_full_version == "3.10.11"
+idna==3.6 ; python_full_version == "3.10.11"
+ipykernel==6.29.0 ; python_full_version == "3.10.11"
+ipython==8.20.0 ; python_full_version == "3.10.11"
+jedi==0.19.1 ; python_full_version == "3.10.11"
+jsonpatch==1.33 ; python_full_version == "3.10.11"
+jsonpointer==2.4 ; python_full_version == "3.10.11"
+jupyter-client==8.6.0 ; python_full_version == "3.10.11"
+jupyter-core==5.7.1 ; python_full_version == "3.10.11"
+kiwisolver==1.4.5 ; python_full_version == "3.10.11"
+langchain-community==0.0.14 ; python_full_version == "3.10.11"
+langchain-core==0.1.14 ; python_full_version == "3.10.11"
+langchain-openai==0.0.3 ; python_full_version == "3.10.11"
+langchain==0.1.0 ; python_full_version == "3.10.11"
+langsmith==0.0.83 ; python_full_version == "3.10.11"
+marshmallow==3.20.2 ; python_full_version == "3.10.11"
+matplotlib-inline==0.1.6 ; python_full_version == "3.10.11"
+matplotlib==3.8.2 ; python_full_version == "3.10.11"
+multidict==6.0.4 ; python_full_version == "3.10.11"
+mypy-extensions==1.0.0 ; python_full_version == "3.10.11"
+nest-asyncio==1.6.0 ; python_full_version == "3.10.11"
+numpy==1.26.3 ; python_full_version == "3.10.11"
+openai==1.7.0 ; python_full_version == "3.10.11"
+outcome==1.3.0.post0 ; python_full_version == "3.10.11"
+packaging==23.2 ; python_full_version == "3.10.11"
+pandas==1.5.3 ; python_full_version == "3.10.11"
+parso==0.8.3 ; python_full_version == "3.10.11"
+pexpect==4.9.0 ; sys_platform != "win32" and python_full_version == "3.10.11"
+pillow==10.2.0 ; python_full_version == "3.10.11"
+platformdirs==4.1.0 ; python_full_version == "3.10.11"
+prompt-toolkit==3.0.43 ; python_full_version == "3.10.11"
+psutil==5.9.8 ; python_full_version == "3.10.11"
+ptyprocess==0.7.0 ; sys_platform != "win32" and python_full_version == "3.10.11"
+pure-eval==0.2.2 ; python_full_version == "3.10.11"
+pycparser==2.21 ; python_full_version == "3.10.11" and (implementation_name == "pypy" or os_name == "nt")
+pydantic==1.10.14 ; python_full_version == "3.10.11"
+pygments==2.17.2 ; python_full_version == "3.10.11"
+pyparsing==3.1.1 ; python_full_version == "3.10.11"
+pyside6-addons==6.6.1 ; python_full_version == "3.10.11"
+pyside6-essentials==6.6.1 ; python_full_version == "3.10.11"
+pyside6==6.6.1 ; python_full_version == "3.10.11"
+pysocks==1.7.1 ; python_full_version == "3.10.11"
+python-dateutil==2.8.2 ; python_full_version == "3.10.11"
+python-dotenv==1.0.0 ; python_full_version == "3.10.11"
+pytz==2023.3.post1 ; python_full_version == "3.10.11"
+pywin32==306 ; sys_platform == "win32" and python_full_version == "3.10.11"
+pyyaml==6.0.1 ; python_full_version == "3.10.11"
+pyzmq==25.1.2 ; python_full_version == "3.10.11"
+regex==2023.12.25 ; python_full_version == "3.10.11"
+requests==2.31.0 ; python_full_version == "3.10.11"
+seaborn==0.13.1 ; python_full_version == "3.10.11"
+selenium==4.16.0 ; python_full_version == "3.10.11"
+shiboken6==6.6.1 ; python_full_version == "3.10.11"
+six==1.16.0 ; python_full_version == "3.10.11"
+sniffio==1.3.0 ; python_full_version == "3.10.11"
+sortedcontainers==2.4.0 ; python_full_version == "3.10.11"
+sqlalchemy==2.0.25 ; python_full_version == "3.10.11"
+stack-data==0.6.3 ; python_full_version == "3.10.11"
+starlette==0.32.0.post1 ; python_full_version == "3.10.11"
+tenacity==8.2.3 ; python_full_version == "3.10.11"
+tiktoken==0.5.2 ; python_full_version == "3.10.11"
+tornado==6.4 ; python_full_version == "3.10.11"
+tqdm==4.66.1 ; python_full_version == "3.10.11"
+traitlets==5.14.1 ; python_full_version == "3.10.11"
+trio-websocket==0.11.1 ; python_full_version == "3.10.11"
+trio==0.24.0 ; python_full_version == "3.10.11"
+typing-extensions==4.9.0 ; python_full_version == "3.10.11"
+typing-inspect==0.9.0 ; python_full_version == "3.10.11"
+urllib3==2.1.0 ; python_full_version == "3.10.11"
+urllib3[socks]==2.1.0 ; python_full_version == "3.10.11"
+uvicorn==0.25.0 ; python_full_version == "3.10.11"
+wcwidth==0.2.13 ; python_full_version == "3.10.11"
+webdriver-manager==4.0.1 ; python_full_version == "3.10.11"
+wsproto==1.2.0 ; python_full_version == "3.10.11"
+yarl==1.9.4 ; python_full_version == "3.10.11"
